# s3_tui

./: Cargo.toml  README.md
src/: .#app.rs  app.rs  commands.rs  events.rs  lib.rs  main.rs  s3objects.rs  ui.rs
src/app/: app.rs  ui.rs
