[package]
name = "hello_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-s3 = "0.17.0"
aws-sdk-dynamodb = "0.17.0"
tokio = {version = "1", features=["full"]}
tui = { version = "0.15", features = ["crossterm"], default-features = false }
crossterm = "0.19"
