[package]
name = "s3_tui"
version = "0.1.11"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A terminal interface to navigating objects stored in AWS S3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-s3 = "0.17.0"
aws-sdk-dynamodb = "0.17.0"
aws-smithy-types = "0.47.0"
tokio = {version = "1", features=["full"]}
tui = { version = "0.15", features = ["crossterm"], default-features = false }
crossterm = "0.19"
clipboard = "0.5.0"
clap = { version = "4.0.13", features = ["derive"] }
eyre = "0.6"